# windows-container-tools

./: .gitignore  CONTRIBUTING.md  README.md  Spaces  azure-pipelines.yml  build.cmd  sdl-compliance-pipeline.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  sdl-compliance-pipeline.yml  test.yml
CertificateTool/: README.md
LogMonitor/: CMakeLists.txt  LogMonitor.sln  README.md
LogMonitor/LogMonitorTests/: CMakeLists.txt  ConfigFileParserTests.cpp  EtwMonitorTests.cpp  EventMonitorTests.cpp  JsonProcessorTests.cpp  LogFileMonitorTests.cpp  LogMonitorTests.cpp  LogMonitorTests.vcxproj  LogMonitorTests.vcxproj.filters  Utility.cpp  Utility.h  UtilityTests.cpp  packages.config  pch.cpp  pch.h
LogMonitor/OneFuzzArtifacts/: OneFuzzConfig.json
LogMonitor/VerifySigning/: verify_signing.ps1
LogMonitor/config/: OneFuzzConfig.json
LogMonitor/docs/: README.md
LogMonitor/fuzz/: Fuzzer.cpp
LogMonitor/src/: CMakeLists.txt
LogMonitor/src/LogMonitor/: ConfigFileParser.cpp  EtwMonitor.cpp  EtwMonitor.h  EventMonitor.cpp  EventMonitor.h  JsonFileParser.cpp  JsonProcessor.cpp  JsonProcessor.h  LogFileMonitor.cpp  LogFileMonitor.h  LogMonitor.rc  LogMonitor.vcxproj  LogMonitor.vcxproj.filters  LogWriter.h  Main.cpp  PipeMonitor.cpp  PipeMonitor.h  ProcessMonitor.cpp  ProcessMonitor.h  SystemInfo.cpp  SystemInfo.h  Tracer.h  Utility.cpp  Utility.h  pch.cpp  pch.h  resource.h  version.h
LogMonitor/src/LogMonitor/FileMonitor/: FileMonitorUtilities.cpp  FileMonitorUtilities.h  Utilities.cpp  Utilities.h
LogMonitor/src/LogMonitor/Parser/: ConfigFileParser.h  JsonFileParser.h  LoggerSettings.h
LogMonitor/src/LogMonitor/etw-monitor-docs/: README.md
LogMonitor/src/LogMonitor/sample-config-files/IIS/: LogMonitorConfig.json
LogMonitor/src/LogMonitor/telemetry/: tracer.hpp
examples/aks/iis-logmonitor/: Dockerfile  LogMonitorConfig.json  README.md
examples/aks/iis-logmonitor/deployment/: az-monitor-configmap.yaml  deployment.yml
examples/aks/iis-logmonitor/ps-scripts/: aks-create.ps1  clean-up.ps1  deploy.ps1  rg-create.ps1  vars.txt
hacks/: .gitignore
hacks/scripts/aks/: .gitignore  README.md  aks-add-windows-nodepool.ps1  aks-create.ps1  aks-delete-windows-nodepool.ps1  rg-create.ps1  rg-delete.ps1  vars.example.txt
hacks/scripts/dockerfiles/logmonitor_iis/: dockerfile
hacks/scripts/dockerfiles/nanoserver_plus/: dockerfile  get_binaries.ps1
hacks/scripts/yaml/: host_process_container.yaml  iis_logmonitor.yaml
